--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PhrasesActivity"></activity>
-        <activity android:name=".ColorsActivity" />
-        <activity android:name=".FamilyActivity" />
+        <activity android:name=".PhrasesActivity"
+            android:label="@string/category_phrases"/>
+        <activity android:name=".ColorsActivity"
+            android:label="@string/category_colors"/>
+        <activity android:name=".FamilyActivity"
+            android:label="@string/category_family"/>
         <activity android:name=".NumbersMainActivity"
             android:label="@string/category_numbers"/>
         <activity android:name=".MainActivity">
